[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
anyhow = "1.0.66"
log = "0.4.17"
env_logger = "0.9.3"
clap-verbosity-flag = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.2"
assert_fs = "1.0.9"
